tests/ui/const-generics/generic_const_parameter_types/references-parent-generics.nofeat.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/references-parent-generics.rs:7:25
   |
LL |     type Assoc<const N: Self>;
   |                         ^^^^ the type must not depend on the parameter `Self`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0770`.
